--- a/app.plist
+++ b/app.plist
@@ -12,19 +12,19 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://your-username.github.io/myapp/Krnl_release_675.ipa</string>
+          <string>https://www.dropbox.com/scl/fi/77qwy9hx8diuqj91nktvi/Krnl_release_675.ipa?rlkey=ppntf3jh32pup2mamvdu2l2h6&st=on932mug&dl=1</string>
         </dict>
       </array>
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.example.krnl</string>
+        <string>com.krnl.ios</string>
         <key>bundle-version</key>
         <string>1.0</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>KRNL</string>
+        <string>KRNL iOS</string>
       </dict>
     </dict>
   </array>
