--- a/app.plist
+++ b/app.plist
@@ -12,7 +12,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://www.dropbox.com/scl/fi/77qwy9hx8diuqj91nktvi/Krnl_release_675.ipa?rlkey=ppntf3jh32pup2mamvdu2l2h6&st=on932mug&dl=1</string>
+          <string>https://www.dropbox.com/scl/fi/77qwy9hx8diuqj91nktvi/Krnl_release_675.ipa?...&dl=1</string>
         </dict>
       </array>
       <key>metadata</key>
